# NodeJackPot

./: ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  moccasin.toml  pyproject.toml
.github/workflows/: contract-tests.yml  frontend-lint.yml
contracts/: raffle.vy
contracts/mocks/: link_token.vy  mock_vrf_coordinator.vy
frontend/: .dockerignore  .gcloudignore  ARCHITECTURE.md  Dockerfile  lint_output.txt  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EliminationFeed.tsx  ErrorBoundary.tsx  QuadraticEntry.tsx  Skeleton.tsx  VaultUI.tsx  Web3Provider.tsx
frontend/src/hooks/: useJackpotData.ts  useRaffle.ts
script/: deploy_raffle.py
tests/integration/: test_raffle_integration.py
tests/staging/: test_raffle_staging.py
tests/unit/: test_raffle.py  test_stateful_fuzzer.py
